--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+      
+      - name: Cache ccache
+        uses: hendrikmuhs/ccache-action@v1.2
+        with:
+          create-symlink: true
 
       - name: Cache Buildroot download folder (dl/)
         uses: actions/cache@v4
@@ -22,14 +27,6 @@ jobs:
           key: buildroot-dl-cache-v1
           restore-keys: |
             buildroot-dl-
-
-      - name: Cache ccache
-        uses: actions/cache@v4
-        with:
-          path: ~/.ccache
-          key: ccache-cache-v1
-          restore-keys: |
-            ccache-
 
       - name: Install dependencies
         run: |
@@ -45,7 +42,6 @@ jobs:
         run: |
           echo 'export CCACHE_DIR=${HOME}/.ccache' >> $GITHUB_ENV
           echo 'export CCACHE_MAXSIZE=500M' >> $GITHUB_ENV
-          echo 'export PATH="/usr/lib/ccache:$PATH"' >> $GITHUB_ENV
 
       - name: Build Buildroot (parallel)
         working-directory: buildroot
